<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="roshetta.roshetta.ViewFriendList">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FriendName1"
        android:id="@+id/loginForm"
        android:layout_marginTop="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveFriend1"
        android:id="@+id/loginButton"
        android:layout_alignTop="@+id/loginFBbutton"
        android:layout_toLeftOf="@+id/loginFBbutton"
        android:layout_toStartOf="@+id/loginFBbutton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessageFriend1"
        android:id="@+id/loginFBbutton"
        android:layout_alignBottom="@+id/loginForm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DoctorName"
        android:id="@+id/userNameLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessageDoctor"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/userNameLogin"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FriendName2"
        android:id="@+id/passwordLogin"
        android:layout_below="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveFriend2"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/passwordLogin"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessageFriend2"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FriendName3"
        android:id="@+id/textView4"
        android:layout_below="@+id/button11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveFriend3"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessageFriend3"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button6"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewTimeline"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewProfile"
        android:id="@+id/button9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewFriend1Profile"
        android:id="@+id/button10"
        android:layout_below="@+id/loginButton"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewFriend2Profile"
        android:id="@+id/button11"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button10"
        android:layout_alignEnd="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewFriend3Profile"
        android:id="@+id/button12"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewDoctorProfile"
        android:id="@+id/button"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

</RelativeLayout>
