<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="roshetta.roshetta.DoctorProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name"
        android:id="@+id/userName"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Email"
        android:id="@+id/userEmail"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="70dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Address"
        android:id="@+id/userAddress"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="90dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateOfBirth"
        android:id="@+id/userDateOfBirth"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="110dp"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PhoneNumber"
        android:id="@+id/userPhoneNumber"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="130dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profilepicture"
        android:layout_marginRight="150dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="250dp"

        android:layout_alignParentTop="true"

        android:id="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PostOnDoctorTimeline"
        android:id="@+id/textView"
        android:layout_marginTop="114dp"
        android:layout_below="@+id/userPhoneNumber"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackToTimeline"
        android:id="@+id/button13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
