<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="roshetta.roshetta.suggestedFriends">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PatientName1"
        android:id="@+id/loginForm"
        android:layout_marginTop="79dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFriend1"
        android:id="@+id/addFriendB1"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_alignTop="@+id/loginForm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PatientName2"
        android:id="@+id/passwordLogin"
        android:layout_below="@+id/viewProf1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFriend2"
        android:id="@+id/addFriendB2"
        android:layout_alignTop="@+id/passwordLogin"
        android:layout_alignLeft="@+id/addFriendB1"
        android:layout_alignStart="@+id/addFriendB1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PatientName3"
        android:id="@+id/textView4"
        android:layout_below="@+id/viewProfile2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="280dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFriend3"
        android:id="@+id/addFriendB3"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/addFriendB2"
        android:layout_alignStart="@+id/addFriendB2" />
</RelativeLayout>
